src/less/core/navbar.less
/* ... */
/* Container
 ========================================================================== */

.uk-navbar-container {
    background: @navbar-background;
    .hook-navbar-container;
}

/*
 * Remove pseudo elements created by micro clearfix as precaution (if Container component is used)
 */

.uk-navbar-container > ::before,
.uk-navbar-container > ::after { display: none !important; }


/* Groups
 ========================================================================== */

/*
 * 1. Align navs and items vertically if they have a different height
 */

.uk-navbar-left,
.uk-navbar-right,
.uk-navbar-center {
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    /* 1 */
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
}

/*
 * Align groups
 */

.uk-navbar-right { margin-left: auto; }

.uk-navbar-center:only-child {
    margin-left: auto;
    margin-right: auto;
}

.uk-navbar-center:not(:only-child) {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
}


/* Nav
 ========================================================================== */

/*
 * 1. Reset lists
 */

.uk-navbar-nav {
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    /* 1 */
    margin: 0;
    padding: 0;
    list-style: none;
}

/*
 * Items (Nav item, item, icon)
 * 1. Center content vertically and horizontally
 * 2. Dimensions
 * 3. Style
 * 4. Required for `a`
 */

.uk-navbar-nav > li > a,
.uk-navbar-item,
.uk-navbar-toggle {
    /* 1 */
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
    /* 2 */
    box-sizing: border-box;
    height: @navbar-nav-item-height;
    padding: 0 @navbar-nav-item-padding-horizontal;
    /* 3 */
    font-size: @navbar-nav-item-font-size;
    font-family: @navbar-nav-item-font-family;
    /* 4 */
    text-decoration: none;
}

/*
 * Nav items
 */

.uk-navbar-nav > li > a {
    color: @navbar-nav-item-color;
    .hook-navbar-nav-item;
}

/*
 * Hover
 * Apply hover style also to focus state and if dropdown is opened
 */

.uk-navbar-nav > li:hover > a,
.uk-navbar-nav > li > a:focus,
.uk-navbar-nav > li.uk-open > a {
    color: @navbar-nav-item-hover-color;
    outline: none;
    .hook-navbar-nav-item-hover;
}

/* OnClick */
.uk-navbar-nav > li > a:active {
    color: @navbar-nav-item-onclick-color;
    .hook-navbar-nav-item-onclick;
}

/* Active */
.uk-navbar-nav > li.uk-active > a {
    color: @navbar-nav-item-active-color;
    .hook-navbar-nav-item-active;
}


/* Item
 ========================================================================== */

.uk-navbar-item {
    color: @navbar-item-color;
    .hook-navbar-item;
}


/* Toggle
 ========================================================================== */

.uk-navbar-toggle {
    color: @navbar-toggle-color;
    .hook-navbar-toggle;
}

.uk-navbar-toggle:hover {
    color: @navbar-toggle-hover-color;
    text-decoration: none;
    .hook-navbar-toggle-hover;
}

.uk-navbar-toggle:focus { outline: none; }

/*
 * Icon
 */

.uk-navbar-toggle-icon {
    display: inline-block;
    width: @navbar-toggle-icon-width;
    height: @navbar-toggle-icon-height;
    .svg-fill("../../images/navbar-toggle-icon.svg", "#000", @navbar-toggle-icon-color);
    background-repeat: no-repeat;
    background-position: 50% 50%;
    .hook-navbar-toggle-icon;
}

/* Hover + Focus */
:hover > .uk-navbar-toggle-icon,
:focus > .uk-navbar-toggle-icon {
    .svg-fill("../../images/navbar-toggle-icon.svg", "#000", @navbar-toggle-icon-hover-color);
    .hook-navbar-toggle-icon-hover;
}


/* Subtitle
 ========================================================================== */

.uk-navbar-subtitle {
    font-size: @navbar-subtitle-font-size;
    .hook-navbar-subtitle;
}


/* Style modifier
 ========================================================================== */

.uk-navbar-transparent {
    background: none;
    .hook-navbar-transparent;
}


/* Dropdown
 ========================================================================== */

/*
 * 1. Hide by default
 * 2. Set position
 * 3. Set a default width
 * 4. Style
 */

.uk-navbar-dropdown {
    /* 1 */
    display: none;
    /* 2 */
    position: absolute;
    z-index: @navbar-dropdown-z-index;
    /* 3 */
    box-sizing: border-box;
    width: @navbar-dropdown-width;
    /* 4 */
    padding: @navbar-dropdown-padding;
    background: @navbar-dropdown-background;
    color: @navbar-dropdown-color;
    .hook-navbar-dropdown;
}

/* Show */
.uk-navbar-dropdown.uk-open { display: block; }

/*
 * Direction / Alignment modifiers
 */

/* Direction */
[class*='uk-navbar-dropdown-top'] { margin-top: -@navbar-dropdown-margin; }
[class*='uk-navbar-dropdown-bottom'] { margin-top: @navbar-dropdown-margin; }
[class*='uk-navbar-dropdown-left'] { margin-left: -@navbar-dropdown-margin; }
[class*='uk-navbar-dropdown-right'] { margin-left: @navbar-dropdown-margin; }

/*
 * Grid
 */

/* Gutter Horizontal */
.uk-navbar-dropdown-grid { margin-left: -@navbar-dropdown-grid-gutter-horizontal; }
.uk-navbar-dropdown-grid > * { padding-left: @navbar-dropdown-grid-gutter-horizontal; }

/* Gutter Vertical */
.uk-navbar-dropdown-grid > .uk-grid-margin { margin-top: @navbar-dropdown-grid-gutter-vertical; }

/* Stack */
.uk-navbar-dropdown-stack .uk-navbar-dropdown-grid > * { width: 100% !important; }

/*
 * Width modifier
 */

.uk-navbar-dropdown-width-2:not(.uk-navbar-dropdown-stack) { width: (@navbar-dropdown-width * 2); }
.uk-navbar-dropdown-width-3:not(.uk-navbar-dropdown-stack) { width: (@navbar-dropdown-width * 3); }
.uk-navbar-dropdown-width-4:not(.uk-navbar-dropdown-stack) { width: (@navbar-dropdown-width * 4); }
/* ... */

